Reduced next meeting date text size and padding to prevent it from wrapping lines

--- a/css/style.css
+++ b/css/style.css
@@ -127,7 +127,7 @@ a { color: #981B1E; }
     box-shadow: 0px 2px 4px #999;
     color: #333;
     display: inline-block;
-    font-size: 4.8em;
+    font-size: 4.75em;
     font-weight: bold;
     margin: 5px;
     position: relative;
@@ -138,7 +138,7 @@ a { color: #981B1E; }
 }
 
 #next-meeting .number {
-    padding: 48px 38px;
+    padding: 46px 32px;
 }
 
 #next-meeting .midLine {
